# keycloak-redirects

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  build.yml  chart.yaml  publish.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  hpa.yaml  serviceaccount.yaml
src/: main.py
src/services/: events.py  keycloak.py  kubernetes.py
src/utils/: unwrap.py
tests/: test_process.py
